fix-reset-popup added overlay and fixed popup alignment

--- a/static/css/deriv/modal.scss
+++ b/static/css/deriv/modal.scss
@@ -19,11 +19,12 @@
         border: 1px solid #ddd;
         background: $white;
         color: #333;
-        padding: 5px;
+        padding: 0.2em;
         border-radius: 3px;
         @include mobile {
-            width: 90vw;
+            width: 90vw !important;
         }
+        z-index: 100;
     }
     &__header {
         border: 1px solid #2a3052;
@@ -32,8 +33,7 @@
         color: $white;
         font-family: roboto, sans-serif;
         font-weight: 400;
-        padding: 0.4em;
-        padding-left: 1em;
+        padding: 0.4em 0.4em 0.4em 0.7em;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -48,9 +48,12 @@
                 align-items: center;
                 color: $white;
                 padding:0;
-                &::after {
+                font-size: 1em;
+                &:after {
                     content: "\00d7";
                     font-weight: 200;
+                    font-size: 18px;
+                    margin-top: -2px;
                 }
             }
         }
@@ -59,23 +62,45 @@
         & .input-row {
             margin: 1em 0;
         }
+        & .reset_component{
+            & p{
+                    margin: 1em;
+                    margin-bottom: 1.2em;
+                        margin-left: 0.7em;
+            }
+        }
     }
     &-reset{
+     
         & .modal__container{
             width: 600px;
         }
         & .reset__footer{
             border-top:1px solid #ddd;
             margin-top: 0.5em;
-            padding: 0.8em 1em 0.5em 0.4em;
+            padding: 0.3em 0.4em 0.2em 1em;
             width: 100%;
             display:flex;
             justify-content: end;
-            & button{
-                height: 40px;
-                margin: 5px;
-                float: right;
+            & .button-primary{
+                margin-right: 0;
             }
+            & button{
+                margin: 0.5em 0.4em 0.5em 0;
+                float: right;
+                font-size: 1em;
+            }
+        }
+          &:after {
+                content: '';
+                position: fixed;
+                top: 0;
+                left: 0;
+                height: 100vh;
+                width: 100%;
+                z-index: 0;
+                background: #aaa;
+                opacity: .3;
         }
     }
     
